# RadeonFlow_Kernels

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TechnicalReport.md  requirements.txt
include/: clangd_workaround.h  gpu_libs.h  gpu_types.h
playground/: async_copy_transpose.cpp  async_gemm.cpp  benchmark_blaslt.cpp  benchmark_grouped_gemm.cpp  device_info.cpp  expert_group_gemm.cpp  gemm2.cpp  hipblaslt_minitest.cpp  hipcub.cpp  layout_shfl.cpp  mask_io.cpp  micro_io.cpp  micro_wmma.cpp  pipeline_gemm.cpp  sgemm2.cpp  sgemm3.cpp  transpose_perf.cpp  wmma.cpp  wmma_layout.cpp  wmma_layout2.cpp
scripts/: eval.py  gen_submission.py  launch_kernel.gdb
scripts/preload/: Makefile  hip_hook.c
scripts/problems/gemm/: reference.py  task.yml
scripts/problems/moe/: task.yml
src/gemm/: gemm_kernel.cpp  gemm_kernel_legacy.cpp  gemm_launcher.cpp  transpose_kernel.cpp
src/mla/: mla.cpp  mla.h  mla_pybind.cpp
src/moe/: gemm_thirdparty.cpp  moe.cpp  moe.h  moe_gemm_pipeline_kernel.cpp  moe_kernels.h  moe_topk_kernel.cpp  transpose.cpp
src/utils/: arithmetic.h  timer.cpp
tests/checker/: checker.cpp  checker.h  metrics.h
tests/gemm/: gemm_test.cpp
tests/misc/: moe_test.py
tests/mla/: intermediate_reference.md  mla_test.cpp  rank.txt  reference.py  test.txt
tests/mla/submit/: submission.py
tests/mla/tune/: tune.py
tests/moe/: moe_topk_test.cpp
tuner/: .gitignore  gemm_batch.py  gemm_tuner.py  moe_param.json  moe_param_test.json  moe_tuner.py  trans_batch.py  trans_tuner.py  tune.sh
tuner/template/: gemm_perf.cpp  trans_perf.cpp
